# dutchbay-epc-model

./:  make_clean_zip.py  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .venv  ANALYTICS_PRODUCTION_READY.md  ANALYTICS_SETUP_COMPLETE.md  CHANGELOG.md  CODEFREEZE.md  Cross-audit debt.py and the debt-service scheduling logic to confirm correct LKR amortization and paydown handling, and ensure DSCR is based on CFADS..md  DEBT_ENHANCEMENT_PATCH.md  DutchBay_EPC_Model.sublime-project  DutchBay_v14_Analytics_README.md  DutchBay_v14_Analytics_Snapshot_2025-11-20.md  DutchBay_v14_clean.json  DutchBay_v14_codebase.json  Makefile  Nice, we’re in the “polish and brag” phase now 😄  P0_2A_COVERAGE_RATIOS_README.md  Python (venv311).sublime-build  QUICKSTART_P0_2A.md  README.md  README_v14_analytics_layer.md  RELEASING.md  SECURITY.md  TEST_ANALYTICS.sh  analyze_directory.py  audit_report.json  check_all_py_files.py  check_staged_py_files.py  check_venv.sh  constants.py  coverage.xml  data.csv  dead_handler_scan_report.json  export_scenario_timeseries.py  full_model_variables_updated.yaml  fx_correlation_module.py   fx_correlation_module_corrected.py  (+52 more)
.github/: CODEOWNERS  pull_request_template.md
analytics/: README.md  __init__.py  config_schema.py  contracts_v14.py  evaluate_scenario.py  executive_workbook.py  export_helpers.py  kpi_normalizer.py  scenario_analytics.py  scenario_loader.py  schema_guard.py
docs/: 9c3cb031.md  Dev_workflow_v14.md  architecture_v14.md  executive_workbook_readme.md  schema.md
dutchbay_v13/: adapters.py  api.py  config.py  core.py  (+8 more)
(+317 files in other folders)
