[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dutchbay-v13"
version = "13.1.0"
description = "Dutch Bay EPC Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "numpy-financial>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.0",
  "bandit>=1.7",
  "pytest>=7.0",
  "pytest-cov>=4.0",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["dutchbay_v13*"]
